yiltc-v0.2-backup/testsuite/negative/assign_type_mismatch.yilt
// Testing assignment to typed variable with wrong type.
fn bad()
    let mut x int = 10
    x = "not an int"
